# basketball_trainer

./: .dockerignore  .env.DIST  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  api.Dockerfile  api_requirements.txt  dash.Dockerfile  dash_requirements.txt  docker-compose.yml  makefile  requirements.txt  setup.cfg  tox.ini
.github/workflows/: test.yaml
assets/tests/: test_incrustration.npy
basketball_trainer/: utils.py
basketball_trainer/src/: game.py  main.py  utils.py
basketball_trainer_src/: game.py  utils.py
developpement/: ball_detection.ipynb  ball_detection.py
scripts/: lint.sh
src/bball_trainer/: __init__.py  config.yaml  game.py  hand_game.py  random_point.py  starting_client.py  utils.py
src/bball_trainer/api/: main.py
src/bball_trainer/crud/: game_record.py  user.py
src/bball_trainer/dashboard/: app.py  controls.py  main_page.py  profile.py
src/bball_trainer/dashboard/assets/: others.css
src/bball_trainer/models/: __init__.py  base.py  database.py  game_record.py  user.py
src/bball_trainer/schemas/: __init__.py  game_record.py  settings.py  user.py
tests/: conftest.py
tests/api/: test_game_record_create.py  test_game_record_get.py  test_user_create.py  test_user_delete.py  test_user_get.py  test_user_login.py  test_user_update.py
tests/dashboard/: test_main_page.py
tests/units/: test_database.py  test_game.py  test_game_camera.py  test_hand_game.py  test_random_point.py  test_starting_client.py  test_utils.py
tests/utils/: __init__.py  db.py  factories.py
