[metadata]
name = basketball-trainer
version = attr: basketball_trainer_src.VERSION
author = Mathis Nicoli
author_email = mathis.nicoli@gmail.com
description = Personal project about basketball training to improve your dribble
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MathisNcl/basketball_trainer
license = MIT

platforms = any

classifiers = 
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    mediapipe
    cvzone
    numpy
    opencv-contrib-python
    black
    flake8
    
include_package_data = True
packag_dir = 
    =basketball_trainer_src
python_requires = ==3.9.16

[options.packages.find]
where = basketball_trainer_src
exclude =
    tests

[options.entry_points]
console_scripts =
    mon_script = mon_package.mon_module:ma_fonction

[options.extras_require]
all =
    %(testing)s
    %(dev)s

testing = 
    pytest
    pytest-cov

dev =
    black
    flake8
    isort
    mypy
    pre-commit
    tox

[bdist_wheel]
universal = 1