[metadata]
name = bball_trainer
version = attr: bball_trainer.VERSION
author = Mathis Nicoli
author_email = mathis.nicoli@gmail.com
description = Personal project about basketball training to improve your dribble
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MathisNcl/basketball_trainer
license = MIT

platforms = any

classifiers = 
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    mediapipe
    cvzone
    numpy
    opencv-contrib-python
    black
    flake8
    
include_package_data = True
packag_dir = 
    =src
python_requires = ==3.9.16

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
all =
    %(testing)s
    %(dev)s

testing = 
    pytest
    pytest-cov
    coverage

dev =
    black
    flake8
    isort
    mypy
    pre-commit
    tox

[bdist_wheel]
universal = 1

[flake8]
    max_line_length=120
    ignore=E203
[mypy]
    python_version = 3.9
    ignore_missing_imports = True
    disallow_untyped_defs = True
    show_error_codes = True

[isort]
src_paths = 
    src
    tests
profile = black
line_length = 120