[metadata]
name = bball_trainer
version = attr: bball_trainer.VERSION
author = Mathis Nicoli
author_email = mathis.nicoli@gmail.com
description = Personal project about basketball training to improve your dribble
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MathisNcl/basketball_trainer
license = MIT

platforms = any

classifiers = 
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    mediapipe==0.9.1.0
    cvzone==1.5.6
    numpy==1.24.3
    opencv-contrib-python==4.5.1.48
    SQLAlchemy[mypy]==2.0.15
    Werkzeug==2.2.3
    pydantic[email]==1.10.4
    fastapi==0.96.1
    uvicorn[standard] >=0.12.0 # fastapi dep
    httpx==0.23.3 # Starlette dep
    dash==2.10.2
    dash-auth==2.0.0
    dash-bootstrap-components==1.4.1
    

include_package_data = True
packag_dir = 
    =src
python_requires = ==3.9.16

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
all =
    %(testing)s
    %(dev)s

testing = 
    pytest==7.2.1
    pytest-cov==4.0.0
    coverage==7.2.3
    psycopg2-binary==2.9.6
    factory-boy==3.2.1
    tox==4.6.0
    dash[testing]==2.10.2

dev =
    black==23.1.0
    flake8==6.0.0
    isort==5.12.0
    mypy==1.0.0
    pydantic[email,dotenv]==1.10.4
    pre-commit==3.0.0
    types-PyYAML==6.0.12.10

[bdist_wheel]
universal = 1

[flake8]
max-line-length=120
ignore=E203

[mypy]
python_version = 3.9
ignore_missing_imports = True
disallow_untyped_defs = True
show_error_codes = True

[mypy-tests.*]
disallow_untyped_defs = False
disable_error_code = annotation-unchecked, index, union-attr

[isort]
src_paths = 
    src
    tests
profile = black
line_length = 120